--- a/inputs/tuna/tuna.yaml
+++ b/inputs/tuna/tuna.yaml
@@ -174,6 +174,7 @@ Tuna:
   plugins:
   - Biomass Snapshot Resetter:
       yearsToReset: 1
+      restoreOriginalLocations: true
   portFilePath: inputs/tuna/ports.csv
   targetYear: 2017
   weatherInitializer:
