--- a/inputs/tuna/tuna_virgin_zero_costs.yaml
+++ b/inputs/tuna/tuna_virgin_zero_costs.yaml
@@ -14,7 +14,7 @@ Tuna:
               steepness: '0.265079184'
           initialBiomassAllocator:
             Equal Allocation:
-              constantValue: '0.2340305633822366'
+              constantValue: '1'
           initialCapacityAllocator:
             Shape File Allocator:
               delegate:
@@ -68,7 +68,7 @@ Tuna:
               steepness: '0.878915170814038'
           initialBiomassAllocator:
             Equal Allocation:
-              constantValue: '0.42177224240711025'
+              constantValue: '1'
           initialCapacityAllocator:
             Shape File Allocator:
               delegate:
