--- a/build.gradle
+++ b/build.gradle
@@ -110,6 +110,11 @@ dependencies {
     implementation 'si.uom:si-units:2.0.1'
 }
 
+processTestResources.doFirst {
+    // explicitly allow overriding files when copying resources
+    duplicatesStrategy = "include"
+}
+
 //this makes tests multi-threaded when called from gradle. Useful!
 test {
     minHeapSize = "1024m"
