--- a/inputs/YAML Samples/scenario/California Map Scenario.yaml
+++ b/inputs/YAML Samples/scenario/California Map Scenario.yaml
@@ -109,6 +109,7 @@ California Map Scenario:
                 rounding: true
                 selectivityAParameter: '23.5035'
                 selectivityBParameter: '9.03702'
+          hourlyGasPriceOverride: nullparameter
       garbageSpeciesName: Others
       proportionSimulatedToGarbage: '0.3221743'
       rounding: true
@@ -125,6 +126,8 @@ California Map Scenario:
       allowMutualFriendships: true
       degree: '2.0'
       equalOutDegree: true
+      predicates: [
+        ]
   portFileName: dts_ports_2011.csv
   priceMap: Dover Sole:0.6698922,Sablefish:4.3235295,Shortspine Thornyhead:1.0428510,Longspine Thornyhead:1.0428510,Yelloweye Rockfish:1.0754502,Others:1.7646181
   recruitmentNoise: '0.0'
