--- a/inputs/YAML Samples/components/DepartingStrategy.yaml
+++ b/inputs/YAML Samples/components/DepartingStrategy.yaml
@@ -64,9 +64,11 @@ Exit Decorator:
       hoursBetweenEachDeparture: '12.0'
 -------
 Full-time Seasonal Retired Decorator:
-  delegate:
+  decorated:
     Max Hours Per Year:
       maxHoursOut: '1200.0'
+  firstYearYouCanSwitch: '-1.0'
+  inertia: '1.0'
   maxHoursOutWhenSeasonal: '100.0'
   minimumVariable: '0.0'
   probabilityStartingFullTime: '1.0'
