--- a/inputs/YAML Samples/components/DestinationStrategy.yaml
+++ b/inputs/YAML Samples/components/DestinationStrategy.yaml
@@ -81,7 +81,7 @@ SNALSAR:
   profit:
     Remembered Profits:
       includeOpportunityCosts: true
-  safety: Ignore Rules
+  safety: Socially Acceptable Everywhere
   sociallyAcceptable: Nobody Fishes Here
 -------
 Heatmap Based:
@@ -325,6 +325,22 @@ Replicator:
       gravitationalConstant: '100.0'
       initialSpeed: '0.0'
 -------
-Random Plan FAD Destination Strategy:
-  numberOfStepsToPlan: 30
+FAD Destination Strategy:
+  numberOfStepsToLookAheadForFadPositions: '30.0'
+  travelSpeedMultiplier: '1.0'
+-------
+FAD Gravity Destination Strategy:
+  gravitationalConstraint: '1.0'
+-------
+Generalized Cognitive Strategy:
+  KExploration: '0.1'
+  minAbsolute: '1.0'
+  minRelative: '0.0'
+  timeScalarFunction:
+    Inverse:
+      exponent: '1.0'
+  weightCommunal: '1.0'
+  weightLegal: '1.0'
+  weightProfit: '1.0'
+  weightReputation: '1.0'
 -------
