--- a/inputs/YAML Samples/components/DirectedGraph.yaml
+++ b/inputs/YAML Samples/components/DirectedGraph.yaml
@@ -3,12 +3,18 @@ No Network
 Barabasi-Albert:
   edgesPerVertex: 2
   parallelFriendshipsAllowed: true
+  predicates: [
+    ]
 -------
 Equal Out Degree:
   allowMutualFriendships: true
   degree: '2.0'
   equalOutDegree: true
+  predicates: [
+    ]
 -------
 Same Size Clubs:
   clubSize: '2.0'
+  predicates: [
+    ]
 -------
