--- a/inputs/YAML Samples/components/Gear.yaml
+++ b/inputs/YAML Samples/components/Gear.yaml
@@ -77,6 +77,7 @@ Sablefish Trawl Selectivity Gear:
 Heterogeneous Selectivity Gear:
   gears: {
     }
+  hourlyGasPriceOverride: nullparameter
 -------
 Abundance Fixed Proportion Gear:
   averageCatchability: '1.0E-4'
@@ -103,5 +104,24 @@ Hour Delay Gear:
   hoursItTake: '12.0'
 -------
 Purse Seine Gear:
-  initialNumberOfFads: 400
+  actionSpecificRegulations:
+  - Active FAD limits:
+      limits:
+        0: 70
+        213: 120
+        426: 300
+        1200: 450
+  averageSetDurationInHours: '8.0219505805135'
+  dudProbability: '0.0'
+  fadInitializerFactory:
+    attractionRates: {
+      }
+    carryingCapacities: {
+      }
+    fishReleaseProbabilityInPercent: '0.0'
+  initialNumberOfFads: 999999
+  minimumSetDurationInHours: '3.03333333333333'
+  stdDevOfSetDurationInHours: '2.99113291538723'
+  successfulSetProbability: '0.9231701'
+  unassociatedCatchSampleFile: null
 -------
