--- a/inputs/YAML Samples/scenario/Abstract 2 Populations.yaml
+++ b/inputs/YAML Samples/scenario/Abstract 2 Populations.yaml
@@ -108,6 +108,8 @@ Abstract 2 Populations:
       allowMutualFriendships: true
       degree: '2.0'
       equalOutDegree: true
+      predicates: [
+        ]
   ports:
     Random Ports:
       numberOfPorts: '1.0'
