--- a/build.gradle
+++ b/build.gradle
@@ -97,6 +97,7 @@ dependencies {
     //testing:
     testImplementation "junit:junit:4.13"
     testImplementation 'org.mockito:mockito-core:3.3.0'
+    testImplementation 'nl.jqno.equalsverifier:equalsverifier:3.1.12'
 
     //guava. Useful for PreConditions and sometimes specialized collections
     implementation "com.google.guava:guava:28.2-jre"
