1) hackish solution to off-world ports in maps. It would have been better to use decorators for pathfinders and distance but I was worried that it wouldn't be always the bottom decorator (but this could have been fixed by making only the delegate accessible/settable; didn't think about it then). 2) Made market proxy work also with non-map arguments (single algorithm factory for all markets); it's a bit dangerous though because some old bad market prices assumed call in order which isn't necessarily the same now.

--- a/inputs/YAML Samples/components/DepartingStrategy.yaml
+++ b/inputs/YAML Samples/components/DepartingStrategy.yaml
@@ -75,3 +75,6 @@ Full-time Seasonal Retired Decorator:
   targetVariable: '100.0'
   variableName: TRIP_PROFITS_PER_HOUR
 -------
+Purse-Seine Gear Departing Strategy:
+  hoursBetweenEachDeparture: '340.3333'
+-------
